--- a/highScores.html
+++ b/highScores.html
@@ -23,7 +23,7 @@
     </header>
 
 
-    <button ><a href="index1.html">Go Back</a></button>
+    <button ><a href="index.html">Go Back</a></button>
     <button onclick="clearHighScores();">Clear High Scores</button>
 
 
